--- a/Contato.html
+++ b/Contato.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contato</title>
-	<meta charset="utf-8">
-	<a href="index.html">
-  	Home
-  </a>
-  
-</head>
-<body>
-<h4>Para mais informações, ligue para: <i>(47) 99673-1933</i></h4>
+  <title>Contato</title>
+  <meta charset="utf-8">
+  <a href="index.html">
+    Home
+  </a><br><br>
 
-</body>
+</head>
+<body background="imagens/fundo3.jpg">
+  
+  <body><h1 style="color: white;">Clique abaixo para entrar em contato via WhatsApp</h1></body>
+  <p><a href="https://wa.me/47996731933"><button><img src="imagens/whats.png" width="50" align="center"></button></a></p><br><br>
+  <body><h1 style="color: white;">Se preferir, envie um e-mail para o endereço:</h1><br> <a href="mailto:viniciusperes409@gmail.com"><button><img src="imagens/email.png" width="50" align="left"></button></a>
+
+  </body>
 </html>
